platform/ratelimit/ratelimit.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: edge
  labels:
    app.kubernetes.io/name: ratelimit
spec:
  selector:
    app.kubernetes.io/name: ratelimit
  ports:
    - {name: http, port: 8080, targetPort: 8080}
    - {name: grpc, port: 8081, targetPort: 8081, appProtocol: grpc}
    - {name: http-metrics, port: 9090, targetPort: 9090}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: edge
  labels:
    app.kubernetes.io/name: ratelimit
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ratelimit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ratelimit
    spec:
      containers:
        - name: ratelimit
          image: envoyproxy/ratelimit:8fe6ea42
          command: ["/bin/ratelimit"]
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 9090
          readinessProbe:
            httpGet: {path: /healthcheck, port: 8080}
          resources:
            requests: {cpu: 20m, memory: 32Mi}
            limits: {memory: 128Mi}
          volumeMounts:
            - name: config
              mountPath: /data/ratelimit/config
      volumes:
        - name: config
          configMap:
            name: ratelimit-config
